# mediasoup_webrtc

./: .gitignore  ARCHITECTURE.md  AUTHENTICATION_QUICKSTART.md  AUTO_UPDATER_GUIDE.md  AUTO_UPDATER_QUICKSTART.md  AUTO_UPDATER_README.md  AUTO_UPDATER_SUMMARY.md  AUTO_UPDATE_SUMMARY.md  BAO_CAO_PHAN_TICH_AUDIO_LAN.md  BUILD_GUIDE.md  BUILD_STATUS.md  FILE_MANAGER_TREE_VIEW.md  FILE_TRANSFER_COMPLETE.md  FILE_TRANSFER_GUIDE.md  FILE_TRANSFER_IMPLEMENTATION.md  FILE_TRANSFER_QUICKSTART.md  FILE_TRANSFER_SUMMARY.md  FILE_TRANSFER_TROUBLESHOOTING.md  GITHUB_ACTIONS_SETUP.md  GITHUB_BUILD_GUIDE.md  GITHUB_CLI_LOGIN.md  GITHUB_UPDATER_QUICKSTART.md  GITHUB_UPDATER_SETUP.md  IMPLEMENTATION_SUMMARY.md  LAN_DISCOVERY_DEBUG.md  LDAP_AUTHENTICATION.md  MEDIASOUP_RUST_MIGRATION.md  PUBKEY_BACKUP.txt  README.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  SPONSOR.md  TCP_VIDEO_STREAMING.md  UPDATER_FIXES.md  UPDATER_GITHUB_README.md  UPDATER_SETUP.md  UPDATER_SETUP_INSTRUCTIONS.md  WORKFLOW_OPTIMIZATION.md  WORKFLOW_SIMPLIFIED.md  latest.json  (+6 more)
.github/: FUNDING.yml  WINDOWS_PATH_FIX.md
.github/workflows/: release.yml  release.yml.old
dist-student/: index.html
dist-student/assets/: index-student-CDiCR8iS.js  index-student-DG-tTRV3.js
docs/: build-instructions.md  build-mismatch.md  h264-decoder-fix.md  h264-windows-fix-v2.md  input-coordinates-fix.md  port-conflict-fix.md  screen_sharing_flow.md  sequence_diagram_explanation.md  universal-build-fix.md  verify-build.md
mediasoup-rust-server/: Cargo.toml  README.md
mediasoup-rust-server/src/: config.rs  main.rs  manager.rs  messages.rs  room.rs  signaling.rs
mediasoup-server/src/: MediasoupManager.ts  Room.ts  SignalingServer.ts  config.ts  index.ts
scripts/: generate-github-manifest.cjs  generate-signing-keys.sh  generate-update-manifest.cjs  prepare-binaries.js  quick-release.sh  release-github.sh  release.sh  rename-student-html.js  sign-updates.sh  update-server-example.js
smartlab-service/: Cargo.toml
smartlab-service/src/: commands.rs  discovery.rs  logon.rs  main.rs  service.rs  vnc.rs
src/: App.css  App.tsx  StudentTrayApp.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.student.conf.json
src-tauri/binaries/: .gitkeep
src-tauri/capabilities/: default.json
src-tauri/src/: audio_capture.rs  autostart.rs  crypto.rs  database.rs  document_distribution.rs  file_transfer.rs  h264_decoder.rs  h264_encoder.rs  input_blocker.rs  lan_discovery.rs  ldap_auth.rs  lib.rs  lib_student.rs  main_student.rs  screen_capture.rs  student_agent.rs  student_auto_connect.rs  student_tray.rs  teacher_connector.rs  udp_audio.rs  udp_frame_transport.rs  video_stream.rs
src-tauri/src/auto_update/: api_client.rs  config.rs  coordinator.rs  downloader.rs  handshake.rs  installer.rs  lan_server.rs  logger.rs  mod.rs  student_coordinator.rs  types.rs  verifier.rs
src-tauri/windows/: hooks.nsi
src/components/: AuthSettings.css  AuthSettings.tsx  AutoUpdater.tsx  ContextMenu.tsx  DebugPanel.tsx  FileManager.tsx  H264VideoPlayer.tsx  KeyManager.tsx  LanDiscovery.tsx  RemoteControlView.tsx  SharingIndicator.tsx  StudentAgent.tsx  StudentDocuments.tsx  StudentFullView.tsx  StudentThumbnail.tsx  StudentTrayWindow.tsx  StudentView.tsx  TeacherView.tsx  UpdateChecker.tsx  UpdateRequiredScreen.tsx  VideoPlayer.tsx
src/examples/: authentication-examples.ts
src/hooks/: useAutoUpdate.ts  useMediasoup.ts  useUdpAudio.ts
src/lib/: mediasoup-client.ts  udp-control-client.ts
src/pages/: FileTransferPage.css  FileTransferPage.tsx  ScreenSharingPage.tsx  ViewClientPage.tsx  index.ts
src/views/: Dashboard.tsx  DocumentManager.tsx  LabControl.tsx  Messaging.tsx  OnlineClassroom.tsx  SessionManagement.tsx  SystemConfig.tsx  UpdatesPage.tsx
tools/ldap-server/: README.md  docker-compose.yml  start.sh
tools/ldap-server/bootstrap/ldif/custom/: 01-users.ldif
tools/ldap-server/data/ldap/config/: cn=config.ldif
tools/ldap-server/data/ldap/config/cn=config/: cn=module{0}.ldif  cn=schema.ldif  olcDatabase={-1}frontend.ldif  olcDatabase={0}config.ldif  olcDatabase={1}mdb.ldif
tools/ldap-server/data/ldap/config/cn=config/cn=schema/: cn={0}core.ldif  cn={1}cosine.ldif  cn={2}nis.ldif  cn={3}inetorgperson.ldif
tools/ldap-server/data/ldap/var/: data.mdb  lock.mdb
