[package]
name = "screensharing-webrtc-mediasoup"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "screensharing-webrtc-mediasoup"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "screensharing_webrtc_mediasoup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Teacher binary (default)
[[bin]]
name = "screensharing-webrtc-mediasoup"
path = "src/main.rs"

# Student binary (no server management)
[[bin]]
name = "screensharing-webrtc-mediasoup-student"
path = "src/main_student.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
async-std = "1"
bincode = "1"
ipnetwork = "0.20"
dirs = "5"

