[package]
name = "screensharing-webrtc-mediasoup"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "screensharing_webrtc_mediasoup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "screensharing-webrtc-mediasoup"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
bcrypt = "0.15"
tokio = { version = "1", features = ["full"] }
async-std = "1"
bincode = "1"
ipnetwork = "0.20"
dirs = "5"
# Audio capture - similar to RustDesk
cpal = { git = "https://github.com/rustdesk-org/cpal", branch = "osx-screencapturekit" }
dasp = { version = "0.11", features = ["signal", "interpolate-linear", "interpolate"] }
log = "0.4"
# View Client feature - authentication
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
# LDAP/Active Directory authentication
ldap3 = "0.12"
# WebSocket server for student agent
tokio-tungstenite = "0.24"
futures-util = "0.3"
# Socket options for port reuse
socket2 = "0.5"
# Screen capture
xcap = "0.3"
# Image encoding
image = { version = "0.25", default-features = false, features = ["jpeg"] }
# H.264 encoding
openh264 = "0.6"
# Parallel processing for YUV conversion
rayon = "1.8"
# Remote control - simulate mouse/keyboard input
enigo = "0.2"
# Timestamp for file transfer job IDs
chrono = "0.4"
# HTTP client for downloading documents and updates
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
# SHA256 hashing for update verification
sha2 = "0.10"
# HTTP server for LAN update distribution
axum = "0.7"
# Async file serving
tokio-util = { version = "0.7", features = ["io"] }
# HTTP types for range requests
http = "1.0"
# HTTP body types
http-body-util = "0.1"

[dev-dependencies]
# Temporary file handling for tests
tempfile = "3"
